--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,21 @@
 language: python
 python:
-- 3.6.5
+  - 3.6.5
 
 before_install:
-- echo """logging: info
-mqtt:
-  broker: test.mosquitto.org
-  port: 1883
-  user:
-  password:
-components:
-""" > config.yaml
+  - |
+      echo """
+      logging: info
+      mqtt:
+      broker: test.mosquitto.org
+      port: 1883
+      user:
+      password:
+      components:
+      """ > config.yaml
 
 install:
-- pip3 install -r requirements.txt
+  - pip3 install -r requirements.txt
 
 script:
-- python mqtthawk
+  - python mqtthawk
