Added testrun option for Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 before_install:
   - |
       echo """
+      testrun:
       logging: info
       mqtt:
         broker: test.mosquitto.org
