--- a/config.yaml.example
+++ b/config.yaml.example
@@ -11,5 +11,11 @@ components:
     state_topic: mqtthawk/notify
     
   - platform: macos_brightness
-    command_topic: mqtthawk/screen/set
-    state_topic: mqtthawk/screen
+    command_topic: mqtthawk/brightness/set
+    state_topic: mqtthawk/brightness
+
+  - platform: keystroke
+    topic: mqtthawk/keystroke
+
+
+
