New component: command_line

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -17,5 +17,7 @@ components:
   - platform: keystroke
     topic: mqtthawk/keystroke
 
-
+  - platform: command_line
+    command_topic: mqtthawk/command/set
+    state_topic: mqtthawk/command
 
